--- a/game/index.html
+++ b/game/index.html
@@ -61,6 +61,26 @@
         </div>
     </section>
 
+    <footer class="game-footer">
+        <div class="footer-container">
+            <div class="footer-links">
+                <a href="#">Sobre</a>
+                <a href="#">Ajuda</a>
+                <a href="#">Termos de uso</a>
+                <a href="#">Política de privacidade</a>
+            </div>
+            <div class="footer-social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="footer-copyright">
+                © Games Jogos Ltda.
+            </div>
+        </div>
+    </footer>
+    
+
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
