--- a/game/index.html
+++ b/game/index.html
@@ -21,6 +21,7 @@
                 <p onmouseover="mostrarpopup()">JOGAR</p>
                 <p onmouseover="mostrarpopup()">LOJA</p>
                 <p onmouseover="mostrarpopup()">EXPLORAR</p>
+                <input class="header-search-field" type="search" placeholder="Buscar" maxlength="100">
             </div>
             <div id="conta">
                 <a href=""><img src="img/user.png" alt=""></a>
